# ant_interface_code

./: .gitignore  ANT_MNE_fastscan.m  ANT_MNE_fastscan_64.m  ANT_MNE_python_util.py  ANT_interface_catEEG.m  ANT_interface_createNeighbor.m  ANT_interface_eego2asa.m  ANT_interface_loadset.m  ANT_interface_readcnt.asv  ANT_interface_readcnt.m  ANT_interface_reref.m  ANT_interface_saveset.m  ANT_interface_setmontage.m  ANT_montage_templates.mat  _duke_129_template.mat  convert_cli.m  duke_128_channelneighbors.mat  duke_128_refmatrix.mat  duke_129_channel_DigMontage.pkl  duke_129_channel_dig.csv  duke_129_channel_topoplot.fig  folder_conversion.jl  gelDuke-129_channel_dig.csv  salineNet-129_channel_topoplot.fig  waveguard_65_template.mat
ANT_montage_templates/: gelDuke-129_channel_topoplot.fig  gelDuke-129_createNeighbor.m  gelDuke-65_channel_dig.csv  gelDuke-65_channel_topoplot.fig  salineNet-129_channel_dig.csv  salineNet-65_channel_dig.csv  salineNet-65_channel_topoplot.fig
ANTeepimport1.13/: pop_loadeep_v4.m
eeglab14_1_2b/: eeglab.m
eeglab14_1_2b/functions/@memmapdata/: nansem.m  sem.m
eeglab14_1_2b/functions/popfunc/: pop_loadcnt.m  pop_readegi.m  pop_resample.m
eeglab14_1_2b/functions/sigprocfunc/: readegilocs.m  readlocs.m  topoplot.m
libeep-3.3.177/: CMakeLists.txt  installer.nsi.in
libeep-3.3.177/java/: CMakeLists.txt  libeep-jni.cc
libeep-3.3.177/mex/matlab/: read_eep_avr.c
libeep-3.3.177/python/: __init__.py  demo_write_cnt.py  pyeep.c
libeep-3.3.177/test/: ReadCNT.java  demo_read_avr.c  demo_read_cnt.c  demo_v4_read_cnt.c
(+5 files in other folders)
